--- a/gen.html
+++ b/gen.html
@@ -24,6 +24,10 @@
     <i>19/01/2005 - Età: 18</i>
     <br>
     <br>
+    Cittadinanza: <br>
+    <i>Italiana</i>
+    <br>
+    <br>
     Occupazione Attuale: <br>
     <i>Inoccupato</i>
     <br>
