--- a/ITindex.html
+++ b/ITindex.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="Italian">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,8 +16,8 @@
                 <h2>Misael Canova</h2>
             </div>
             <div class="info">
-                <p><strong>Based in:</strong> Italy</p>
-                <p><strong>Age:</strong> 19</p>
+                <p><strong>Residenza:</strong> Italia</p>
+                <p><strong>Età:</strong> 19</p>
                 
                 <div class="skills">
                     <div class="skill">
@@ -35,14 +35,14 @@
                     </div>
 
                     <div class="skill">
-                        <p>Database Management</p>
+                        <p>Gestione Database</p>
                         <div class="progress-bar">
                             <div class="progress" style="width: 65%;"></div>
                         </div>
                     </div>
 
                     <div class="skill">
-                        <p>Operating Systems</p>
+                        <p>Sistemi Operativi</p>
                         <div class="progress-bar">
                             <div class="progress" style="width: 85%;"></div>
                         </div>
@@ -61,30 +61,30 @@
         <!-- Main content -->
         <div class="main-content">
             <header>
-                <h1>Discover my journey and my skills!</h1>
-                <p>Exploring all dimensions of computer science.</p>
+                <h1>Scopri il mio percorso e le mie competenze!</h1>
+                <p>Esploro tutte le dimensioni dell'informatica.</p>
                 <button type = "button" onclick = "window.location.href = 'about.html';">About Me</button>
             </header>
             <section class="services">
                 <div class="service-item">
-                    <h4>Computer Science</h4>
-                    <p>Technical Skills</p>
-                    <button type = "button" onclick = "window.location.href = 'cs.html';">More Info</button>
+                    <h4>Informatica</h4>
+                    <p>Abilità Tecniche</p>
+                    <button type = "button" onclick = "window.location.href = 'ITcs.html';">Scopri di più</button>
                 </div>
                 <div class="service-item">
-                    <h4>Languages Known</h4>
-                    <p>Levels & Certifications</p>
-                    <button type = "button" onclick = "window.location.href = 'lang.html';">More Info</button>
+                    <h4>Lingue </h4>
+                    <p>Livelli & Certificazioni</p>
+                    <button type = "button" onclick = "window.location.href = 'lang.html';">Scopri di più</button>
                 </div>
                 <div class="service-item">
                     <h4>Curriculum Vitae</h4>
-                    <p>Education & Experience</p>
+                    <p>Percorsi formativi & Esperienze</p>
                     <button type = "button" onclick = "window.location.href = 'cven.pdf';">Download</button>
                 </div>
                 <div class="service-item">
-                    <h4>Open Source Projects</h4>
-                    <p>GitHub Repos</p>
-                    <button type = "button" onclick = "window.location.href = 'https://github.com/misaelcanova?tab=repositories';">More Info</button>
+                    <h4>Progetti Open Source</h4>
+                    <p>Repo GitHub</p>
+                    <button type = "button" onclick = "window.location.href = 'https://github.com/misaelcanova?tab=repositories';">Scopri di più</button>
                 </div>
             </section>
             <div class="credits">
@@ -97,4 +97,3 @@
 </body>
 <!-- MKII - made by @misaelcanova (github). Have fun ✌️-->
 </html>
-
