--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="service-item">
                     <h4>Curriculum Vitae</h4>
                     <p>Education & Experience</p>
-                    <button type = "button" onclick = "window.location.href = 'cven.pdf';">Download</button>
+                    <button type = "button" onclick = "window.location.href = 'curriculum.pdf';">Download</button>
                 </div>
                 <div class="service-item">
                     <h4>Open Source Projects</h4>
